--- a/src/style.css
+++ b/src/style.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .logo {
